syntax = "proto3";

package webauthn;

option go_package = "og/gen/buf/go/proto/server";

message EnvironmentOptionsResponse {
  repeated string environment_options = 1;
}

message RequestQuickInfoResponse {
  string id = 1;
  string service = 2;
  string path = 3;
  string true_path = 4;
  string method = 5;
  string payload = 6;
}

message EnvironmentOptionsRequest {
  string service = 1;
}

service OgWebServerService {
  rpc EnvironmentOptions(EnvironmentOptionsRequest) returns (EnvironmentOptionsResponse) {}
}
